Update en README

--- a/src/templates/emails/account-recovery.html
+++ b/src/templates/emails/account-recovery.html
@@ -64,7 +64,7 @@
                             {{code}}
                           </div>
                         </div>
-                        <table role="presentation" cellpadding="0" cellspacing="0" style="margin: 10px 0 8px 0;" hidden>
+                        <!--<table role="presentation" cellpadding="0" cellspacing="0" style="margin: 10px 0 8px 0;" hidden>
                           <tr>
                             <td align="center" class="btn" style="background:#111827; border-radius:12px;">
                               <a href="{{link}}"
@@ -80,7 +80,7 @@
                             <a href="{{link}}" style="color:#2563eb;">{{link}}</a>
                           </div>
                         </div>
-                        <hr style="border:none; border-top:1px solid #e5e7eb; margin: 18px 0;" />
+                        <hr style="border:none; border-top:1px solid #e5e7eb; margin: 18px 0;" />-->
                         <div class="p" style="font-size:13px; line-height:20px; color:#6b7280; margin:0;">
                           Si no solicitaste esta recuperación, puedes ignorar este mensaje.
                           <br />
